# GreetingBot

./: .gitignore  1  Cargo.toml  README-EN.md  README-RU.md  README.md  test.toml
.github/workflows/: rust.yml
src/: ai.rs  config.rs  date.rs  db.rs  main.rs  panic_tweak.rs  weather.rs
src/ai_mod/: ai.rs  mod.rs  ollama_ai.rs
src/db_mod/: database.rs  sqlite_database.rs
src/handlers/: commands.rs  daily_messages.rs  date.rs  draw.rs  formats.rs  mod.rs  scheduler.rs  start.rs
src/handlers_mod/: bind_commands_handler.rs  commands.rs  daily_messages.rs  daily_messages_handler.rs  date.rs  date_handler.rs  draw.rs  draw_handler.rs  formats.rs  formats_handler.rs  mod.rs  scheduler.rs  scheduler_handler.rs  start_handler.rs
src/infra/: ai.rs  database.rs  mod.rs  ollama.rs  sqlite.rs  weather.rs  wttr_in.rs
src/models/: mod.rs  traits.rs  types.rs  user.rs  weather.rs
src/models_mod/: mod.rs  user_model.rs  weather_model.rs
src/platforms_mod/: mod.rs  platform.rs  telegram_platform.rs
src/tools/: config.rs  mod.rs  panic_tweak.rs
src/tools_mod/: config_tools.rs  mod.rs
src/traits_mod/: create_traits.rs  mod.rs
src/types_mod/: mod.rs
src/weather_mod/: mod.rs  weather.rs  wttr_in_weather.rs
