[package]
name = "greeting"
version = "0.7.0-beta1"
edition = "2024"

[dependencies]
chrono = "*"
teloxide = { version = "*", features = ["macros"] }
tokio = { version = "*", features = ["full", "macros"] }
log = "*"
dotenvy = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
string_format = "*"
config = "*"
ollama-rs = "*"
sqlx = { version = "*", features = ["sqlite", "runtime-tokio"] }
rand = "*"
cron_tab = { version = "*", features = ["sync", "async"] }
regex = "*"
async-trait = "*"
tracing = "*"
tracing-subscriber = "*"
