[package]
name = "greeting"
version = "0.7.0-beta2"
edition = "2024"
description = "Greeting Bot is a Telegram bot, which sends a message to all users in database with AI-generated text."
license-file = "LICENSE"
repository = "https://github.com/OneProgGit/GreetingBot"
keywords = ["telegram", "bot", "ai"]
categories = ["api-bindings"]

[dependencies]
chrono = "0.4"
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.47", features = ["full", "macros"] }
log = "0.4"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
string_format = "0.1"
config = "0.15"
ollama-rs = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
rand = "0.9"
cron_tab = { version = "0.2", features = ["sync", "async"] }
regex = "1.11"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
